# Tauri-Template

./: .gitignore  .gitmessage  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlint.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.ignore  biome.jsonc  dprint.json  lefthook.yml  netlify.toml  package.json  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  tauri.yml
.husky/: commit-msg  pre-commit  pre-push
.isolation/: index.html
.storybook/: main.ts
agent-memories/: architecture.md  code-style.md  css-system.md  dev-workflow.md  user-preferences.md
docs/: NOTES.md  architecture-decisions.md  color-system.md  css.md  customizing-template.md  development.md  pwa-web-standards.md  roadmap.md  seo-strategy.md  sveltekit.md  testing.md  typescript.md
scripts/commit-msg/: lint-title.ts
scripts/commit-msg/__tests__/: lint-title.test.ts
src/: app.html  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-commands.toml  scope-applocaldata.toml
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  setup.rs
src-tauri/src/config/: init.rs  serialize.rs  types.rs
src/lib/: bindings.ts
src/lib/components/: Accordion.svelte  Header.svelte  HeroImage.svelte  (+4 more)
src/routes/: +error.svelte  +layout.svelte  +layout.ts
src/stories/: Header.svelte  Page.stories.svelte  Page.svelte
test/specs/: test.e2e.ts
tests/specs/: test.e2e.ts
(+65 files in other folders)
